--- a/styles/partials/_colors.scss
+++ b/styles/partials/_colors.scss
@@ -1,6 +1,6 @@
 $black: #323232;
-$silver: #AFAFAF;
-$white: #FFFFFF;
+$silver: #afafaf;
+$white: #ffffff;
 $darkblack: #000000;
-$mercury: #E1E1E1;
-$alabaster: #FAFAFA;
+$mercury: #e1e1e1;
+$alabaster: #fafafa;
