--- a/styles/show.css
+++ b/styles/show.css
@@ -36,6 +36,7 @@
   .hero__sound-wrapper {
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
   }
   .hero__sound-wrapper iframe {
     max-width: 30%;
@@ -128,13 +129,16 @@ section {
 .shows__table--hide {
   display: none;
 }
-.shows__table-data-row:not(:first-child):hover {
+.shows__table-data-row {
+  cursor: pointer;
+}
+.shows__table-data-row:hover {
   background-color: #fafafa;
 }
 .shows__table-data-row--active {
   background-color: #e1e1e1;
 }
-.shows__table-data-row--active:not(:first-child):hover {
+.shows__table-data-row--active:hover {
   background-color: #e1e1e1;
 }
 @media (min-width: 1280px) {
