--- a/styles/show.scss
+++ b/styles/show.scss
@@ -21,7 +21,7 @@
       align-items: center;
 
       iframe {
-        max-width: 30%;
+        max-width: 35%;
       }
     }
   }
@@ -77,22 +77,21 @@ th {
   }
 }
 
-section {
-  padding: 1rem 0;
-  @include tablet {
-    padding: 1rem;
-  }
-  @include desktop {
-    padding: 1rem 3rem;
-  }
-}
-
 .shows {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding-top: 1rem;
   padding-bottom: 1rem;
+
+  &__header {
+    font-size: 1.5rem;
+    font-weight: 700;
+    padding: 1.5rem 0 0;
+    @include tablet {
+      padding: 2rem 0 1.5rem;
+    }
+  }
 
   &__table {
     font-size: 0.75rem;
